# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/image_standard/ide/image_decode_config.gni")

#config("bitmapconverter_public_config") {
#  visibility = [ ":*" ]
#  include_dirs = [
#    "${asdk_dir}/static_library/${target_os}_${target_cpu}/include/external/skia/include/core",
#    "${asdk_dir}/static_library/${target_os}_${target_cpu}/include/external/skia/include/private",
#    "${asdk_dir}/static_library/${target_os}_${target_cpu}/include/external/skia/include/config",
#    "${asdk_dir}/static_library/${target_os}_${target_cpu}/include/external/skia/include/config/android",
#    "${asdk_dir}/static_library/${target_os}_${target_cpu}/include/external/skia/include/gpu",
#    "${asdk_dir}/shared_library/${target_os}_${target_cpu}/include/frameworks/base/libs/hwui/hwui",
#    "${asdk_dir}/shared_library/${target_os}_${target_cpu}/include/frameworks/native/libs/nativewindow/include",
#    "${asdk_dir}/shared_library/${target_os}_${target_cpu}/include/frameworks/native/libs/arect/include",
#    "${asdk_dir}/shared_library/${target_os}_${target_cpu}/include/system/core/libcutils/include",
#    "${asdk_dir}/shared_library/${target_os}_${target_cpu}/include/frameworks/native/libs/ui/include",
#    "${asdk_dir}/shared_library/${target_os}_${target_cpu}/include/frameworks/native/libs/nativebase/include",
#    "${asdk_dir}/shared_library/${target_os}_${target_cpu}/include/system/core/libsystem/include",
#    "${asdk_dir}/shared_library/${target_os}_${target_cpu}/include/system/core/libutils/include",
#    "${asdk_dir}/shared_library/${target_os}_${target_cpu}/include/hardware/libhardware/include",
#    "${asdk_dir}/shared_library/${target_os}_${target_cpu}/include/hardware/libhardware/include",
#    "${asdk_dir}/shared_library/${target_os}_${target_cpu}/include/system/core/liblog/include",
#  ]

#  if (use_mingw_win) {
#    include_dirs += [
#      "${asdk_dir}/shared_library/${target_os}_${target_cpu}/include/external/skia/include/config/win",
#      "${asdk_dir}/shared_library/${target_os}_${target_cpu}/include/external/skia/include/config",
#    ]
#  } else {
#    include_dirs += [ "${asdk_dir}/static_library/${target_os}_${target_cpu}/include/external/skia/include/config/android" ]
#  }
#}

ohos_shared_library("bitmapconverter") {
  sources = [
    "//foundation/multimedia/image_standard/adapter/frameworks/bitmapconverter/native/src/bitmap_wrapper.cpp",
    "//foundation/multimedia/image_standard/adapter/frameworks/bitmapconverter/native/src/image_bitmap_converter.cpp",
  ]

#  public_configs = [ ":bitmapconverter_public_config" ]

  include_dirs = [
    "//foundation/multimedia/utils/include",
    "//foundation/multimedia/image_standard/interfaces/innerkits/include",
    "//foundation/multimedia/image_standard/adapter/frameworks/bitmapconverter/native/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
        "//third_party/flutter/skia/include/core",
    "//third_party/flutter/skia/include/encode",
    "//third_party/flutter/skia",
    "//third_party/flutter/skia/src/ports/skia_ohos",
    "//third_party/flutter/skia/src/ports",
    "//third_party/flutter/skia/src/images",
    "//third_party/flutter/skia/src/ports/skia_ohos",
    "//third_party/flutter/skia/third_party/externals/freetype/include/freetype",
    "//third_party/flutter/skia/include/private",

  ]

  if (use_mingw_win) {
    include_dirs += [ "//foundation/multimedia/image_standard/mock/native/include" ]

    deps = [
      "//foundation/multimedia/image_standard/interfaces/innerkits:static_image",
      "//foundation/multimedia/image_standard/mock/native:log_mock_static",
    ]

    libs = [ "//foundation/multimedia/image_standard/libskia.a" ]
  } else {
    include_dirs += [
      "//utils/native/base/include",
#      "//sdk/aosp-arm64/communication/ipc_core/include/",
    ]

    deps = [
      "//foundation/multimedia/image_standard/interfaces/innerkits:image",
      "//utils/native/base:utils",
    ]

#    aosp_deps = [
#      "shared_library:libhwui",
#      "shared_library:liblog",
#    ]

    external_deps = [
      "hiviewdfx_hilog_native:libhilog",
      "ipc:ipc_core",
    ]
  }

  subsystem_name = "multimedia"
  part_name = "multimedia_image"
}

ohos_static_library("static_bitmapconverter") {
  sources = [
    "//foundation/multimedia/image_standard/adapter/frameworks/bitmapconverter/native/src/bitmap_wrapper.cpp",
    "//foundation/multimedia/image_standard/adapter/frameworks/bitmapconverter/native/src/image_bitmap_converter.cpp",
  ]

#  public_configs = [ ":bitmapconverter_public_config" ]

  include_dirs = [
    "//foundation/multimedia/utils/include",
    "//foundation/multimedia/image_standard/interfaces/innerkits/include",
    "//foundation/multimedia/image_standard/adapter/frameworks/bitmapconverter/native/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//third_party/flutter/skia/include/core",
    "//third_party/flutter/skia/include/encode",
    "//third_party/flutter/skia",
    "//third_party/flutter/skia/src/ports/skia_ohos",
    "//third_party/flutter/skia/src/ports",
    "//third_party/flutter/skia/src/images",
    "//third_party/flutter/skia/src/ports/skia_ohos",
    "//third_party/flutter/skia/third_party/externals/freetype/include/freetype",
    "//third_party/flutter/skia/include/private",

  ]

  if (use_mingw_win) {
    include_dirs += [ "//foundation/multimedia/image_standard/mock/native/include" ]

    deps = [
      "//foundation/multimedia/image_standard/interfaces/innerkits:static_image",
      "//foundation/multimedia/image_standard/mock/native:log_mock_static",
    ]

    libs = [ "//foundation/multimedia/image_standard/libskia.a" ]
  } else {
    include_dirs += [
      "//utils/native/base/include",
#      "//sdk/aosp-arm64/communication/ipc_core/include/",
      "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    ]

    deps = [
      "//foundation/multimedia/image_standard/interfaces/innerkits:image",
      "//utils/native/base:utils",
    ]

#    aosp_deps = [
#      "shared_library:libhwui",
#      "shared_library:liblog",
#    ]

    external_deps = [
      "hiviewdfx_hilog_native:libhilog",
      "ipc:ipc_core",
    ]
  }
}

#config("image_converter_jni_config") {
#  visibility = [ ":*" ]
#  include_dirs = [
#    "//utils/native/base/include",
#    "//utils/jni/jnikit/include",
#    "//foundation/multimedia/image_standard/frameworks/innerkitsimpl/include",
#    "//foundation/multimedia/image_standard/interfaces/innerkits/include",
#    "//foundation/multimedia/image_standard/plugins/manager/include",
#    "//foundation/multimedia/utils/include",
#    "//foundation/multimedia/image_standard/adapter/frameworks/bitmapconverter/native/include",
#  ]
#}

#group("g_image_converter_jni") {
#  deps = [ ":image_converter_jni" ]
#}

#ohos_shared_library("image_converter_jni") {
#  sources = [
#    "src/image_native_interface_utils.cpp",
#    "src/ohos_image_ImageDoubleFwConverter.cpp",
#  ]

#  configs = [ ":image_converter_jni_config" ]

#  include_dirs = [ "//sdk/aosp-arm64/communication/ipc_core/include/" ]

#  deps = [
#    "//foundation/multimedia/image_standard/adapter/frameworks/bitmapconverter/native:bitmapconverter",
#    "//foundation/multimedia/image_standard/interfaces/innerkits:image",
#    "//foundation/multimedia/image_standard/plugins/manager:pluginmanager",
#    "//utils/jni:utils_jnikit",
#    "//utils/native/base:utils",
#  ]

#  external_deps = [
#    "hilog:libhilog",
#    "ipc:ipc_core",
#  ]
#  subsystem_name = "multimedia"
#  part_name = "multimedia_image"
#}
