# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "multimedia_image/image"

ohos_java_unittest("test_imagecodec_java_maple") {
  sub_output_dir = "$module_output_path/"

  java_files = [
    "unittest/src/ohos/media/image/common/PositionTest.java",
    "unittest/src/ohos/media/image/common/RectTest.java",
    "unittest/src/ohos/media/image/common/SizeTest.java",
    "unittest/src/ohos/media/image/PropertyFilterTest.java",
    "unittest/src/ohos/media/image/ImagePackerTest.java",
    "unittest/src/ohos/media/image/ImagePixelMapKitTest.java",
    "unittest/src/ohos/media/image/ImageSourceKitTest.java",
    "unittest/src/ohos/media/image/PixelMapNdkTest.java",
  ]

  classpath_deps = [ "//foundation/multimedia/image/adapter/frameworks/exif:image_exifadapter_java" ]

  deps = [
    "//foundation/multimedia/image/interfaces/kits/java:image_maple_java",
    "//foundation/multimedia/image/interfaces/kits/native/ndk_test_example:image_ndk_test_jni",
    "//foundation/multimedia/utils/java:multimedia_utils_maple_java",
    "//utils/java:utils_java",
    "//utils/java:utils_maple_java",
  ]

  external_deps = [
    "hilog:hilog_maple_java",
    "ipc:ipc_java",
    "resmgr:kits_java",
    "startup:syspara_java",
    "utils:utils_maple_java",
  ]

  resource_config_file =
      "//foundation/multimedia/image/test/resource/image/ohos_test.xml"
}

ohos_java_unittest("test_imagereceiver_java_maple") {
  sub_output_dir = "$module_output_path/"

  java_files = [
    "unittest/src/ohos/media/image/common/ImageFormatTest.java",
    "unittest/src/ohos/media/image/ImageTest.java",
    "unittest/src/ohos/media/image/ImageReceiverTest.java",
  ]

  deps = [
    "//foundation/multimedia/image/interfaces/kits/java:image_receiver_maple_java",
    "//foundation/multimedia/utils/java:multimedia_utils_maple_java",
  ]

  external_deps = [
    "appexecfwk:eventhandler_java_maple",
    "graphic:agp_maple_java",
    "hilog:hilog_maple_java",
    "utils:utils_maple_java",
  ]

  resource_config_file =
      "//foundation/multimedia/image/test/resource/image/ohos_test.xml"
}

group("unittest") {
  testonly = true
  deps = [
    ":test_imagecodec_java_maple",
    ":test_imagereceiver_java_maple",
  ]
}

ohos_java_performancetest("image_performance_test_java_maple") {
  java_files = [
    "performancetest/src/ohos/media/image/ImagePerformanceTest.java",
    "//foundation/multimedia/utils/java/test/unittest/src/ohos/media/utils/PerformanceUtil.java",
    "//foundation/multimedia/utils/java/test/unittest/src/ohos/media/utils/PrivateMemberAccess.java",
  ]

  deps = [
    "//foundation/multimedia/image/interfaces/kits/java:image_maple_java",
    "//foundation/multimedia/utils/java:multimedia_utils_maple_java",
    "//test/developertest/libs/jtr/common/java:perf_test_framework_java",
  ]

  external_deps = [
    "appexecfwk:appexecfwk_java_maple",
    "appexecfwk:eventhandler_java_maple",
    "hilog:hilog_maple_java",
    "startup:syspara_java",
    "utils:utils_maple_java",
  ]

  sub_output_dir = "$module_output_path/"
  resource_config_file =
      "//foundation/multimedia/image/test/resource/image/ohos_test.xml"
}

group("performance") {
  testonly = true
  deps = [ ":image_performance_test_java_maple" ]
}
