# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "multimedia_image/image_standard"

#ohos_java_unittest("test_imagesystemadapter_java_maple") {
#  java_files =
#      [ "unittest/src/ohos/media/image/inner/ImageDoubleFwConverterTest.java" ]
#
#  deps = [
#    "//foundation/multimedia/image/adapter/frameworks/bitmapconverter/java:imagesystemadapter_maple_java",
#    "//foundation/multimedia/image/interfaces/kits/java:image_maple_java",
#    "//foundation/multimedia/utils/java:multimedia_utils_maple_java",
#    "//utils/java:utils_java",
#    "//utils/java:utils_maple_java",
#  ]

#  external_deps = [
#    "ipc:ipc_java",
#    "utils:utils_maple_java",
#  ]

#  sub_output_dir = "$module_output_path/"
#  resource_config_file =
#      "//foundation/multimedia/image/test/resource/image/ohos_test.xml"
#}

#group("unittest") {
#  testonly = true
#  deps = [ ":test_imagesystemadapter_java_maple" ]
#}
