# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

 import("//build/test.gni")

 ohos_fuzztest("ImageFrameworkFuzzTest")
 {
    module_out_path = "multimedia_image/image_framework"
    fuzz_config_file = "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/fuzztest/imageframework_fuzzer"

    include_dirs = [
        "./include",
        "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    ]

    sources = ["src/imageframework_fuzzer.cpp"]

    deps = ["//foundation/multimedia/image_framework/interfaces/innerkits:image_native"]

    external_deps = ["graphic_2d:color_manager","c_utils:utils",]
 }