# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
# import("//foundation/arkui/ace_engine/ace_config.gni")
import("//foundation/multimedia/image_framework/ide/image_decode_config.gni")
# import("//third_party/flutter/flutter_config.gni")

ohos_static_library("exifhelper") {
  if (!use_clang_android && !use_clang_ios) {
    sanitize = {
      cfi = true
      debug = false
      blocklist = "./cfi_blocklist.txt"
    }
  }
  sources = [ "exifhelper/exif_info.cpp" ]
  include_dirs = [
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//third_party/libexif"
  ]

    # include_dirs += [ "//commonlibrary/c_utils/base/include" ]
    deps = [ "//third_party/libexif:libexif" ]

    external_deps = [
        "c_utils:utils",
        "hitrace_native:hitrace_meter",
        "hiviewdfx_hilog_native:libhilog",
        # "libexif:libexif"
    ]
  part_name = "multimedia_image_framework"
  subsystem_name = "multimedia"
}
