# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/graphic/image_framework/ide/image_decode_config.gni")

ohos_shared_library("bmpplugin") {
  if (!use_clang_android && !use_clang_ios) {
    sanitize = {
      cfi = true
      cfi_cross_dso = true
      debug = false
    }
  }
  sources = [
    "$image_subsystem/plugins/common/libs/image/libbmpplugin/src/bmp_decoder.cpp",
    "$image_subsystem/plugins/common/libs/image/libbmpplugin/src/bmp_stream.cpp",
    "$image_subsystem/plugins/common/libs/image/libbmpplugin/src/plugin_export.cpp",
  ]

  include_dirs = [
    "//foundation/multimedia/utils/include",
    "$image_subsystem/plugins/manager/include",
    "$image_subsystem/plugins/manager/include/image",
    "$image_subsystem/plugins/manager/include/pluginbase",
    "$image_subsystem/plugins/common/libs/image/libbmpplugin/include",
    "$image_subsystem/interfaces/innerkits/include",
    "$image_subsystem/frameworks/innerkitsimpl/utils/include",
    "${graphic_subsystem}/interfaces/inner_api/surface",
    "$skia_root/skia/include/core",
    "$skia_root/skia/include/codec",
    "$skia_root/skia",
    "//foundation/graphic/graphic_2d/utils/color_manager/export",
    "$skia_root/skia/include/codec",
    "$skia_root/skia",
    "$skia_root/skia/include/core",
    "//third_party/flutter/skia/third_party/skcms",
  ]
  if (use_mingw_win) {
    defines = image_decode_windows_defines
    include_dirs += [
      "$image_subsystem/mock/native/include",
      "$image_subsystem/mock/native/include/secure",
      "${asdk_dir}/static_library/${target_os}_${target_cpu}/include/external/skia/include/codec",
      "${asdk_dir}/static_library/${target_os}_${target_cpu}/include/external/skia/include/core",
      "${asdk_dir}/static_library/${target_os}_${target_cpu}/include/external/skia/include/config/win",
      "${asdk_dir}/static_library/${target_os}_${target_cpu}/include/external/skia/include/config",
    ]
    deps = [
      "//foundation/graphic/ide/libs/skia:skia",
      "$image_subsystem/frameworks/innerkitsimpl/utils:image_utils_static",
      "$image_subsystem/mock/native:log_mock_static",
      "$image_subsystem/plugins/manager:pluginmanager_static",
    ]
    deps += skia_core

    #libs = [ "//foundation/multimedia/image/libskia.lib" ]
  } else if (use_clang_mac) {
    defines = image_decode_mac_defines
    include_dirs += [
      "$image_subsystem/mock/native/include",
      "${asdk_dir}/static_library/${target_os}_${target_cpu}/include/external/skia/include/codec",
      "${asdk_dir}/static_library/${target_os}_${target_cpu}/include/external/skia/include/core",
      "${asdk_dir}/static_library/${target_os}_${target_cpu}/include/external/skia/include/config/mac",
      "${asdk_dir}/static_library/${target_os}_${target_cpu}/include/external/skia/include/config",
      "//third_party/bounds_checking_function/include",
    ]
    deps = [
      "//foundation/graphic/ide/libs/skia:skia",
      "$image_subsystem/frameworks/innerkitsimpl/utils:image_utils_static",
      "$image_subsystem/mock/native:log_mock_static",
      "$image_subsystem/plugins/manager:pluginmanager_static",
      "//third_party/bounds_checking_function:libsec_static",
    ]
  } else {
    include_dirs += [ "//commonlibrary/c_utils/base/include" ]
    deps = [
      "//foundation/graphic/graphic_2d/utils/color_manager:color_manager",
      "$image_subsystem/frameworks/innerkitsimpl/utils:image_utils",
      "$image_subsystem/plugins/manager:pluginmanager",
    ]
    deps += skia_platform

    external_deps = [
      "c_utils:utils",
      "graphic_2d:surface",
      "hilog:libhilog",
    ]
  }
  cflags = [ "-DIMAGE_COLORSPACE_FLAG" ]
  subsystem_name = "graphic"
  part_name = "image_framework"
}

ohos_prebuilt_etc("bmppluginmetadata") {
  source = "bmpplugin.pluginmeta"
  relative_install_dir = "multimediaplugin/image"
  subsystem_name = "graphic"
  part_name = "image_framework"
}
